--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ form {
 .main-background {
     min-height: 561px;
     height: 100%;
-    background: url(/img/main-background.png) no-repeat center top;
+    background: url('../img/main-background.png') no-repeat center top;
     background-size: 100% 100%;
 }
 
