--- a/style.css
+++ b/style.css
@@ -632,3 +632,27 @@ textarea:focus {
         justify-content: space-around;
     }
 }
+
+@media screen and (max-width: 1280px) {
+    .container-header,
+    .box-container {
+        max-width: 1100px;
+        width: 100%;
+    }
+    .catalog-wrap {
+        display: grid;
+        grid-template-columns: repeat(4, minmax(263px, 1fr));
+        gap: 15px;
+    }
+    .product {
+        max-width: 263px;
+    }
+    .advantages-block_wrap {
+        max-width: 1100px;
+        justify-content: space-between;
+    }
+    .product:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.5);
+    }
+}
