--- a/style.css
+++ b/style.css
@@ -631,6 +631,10 @@ textarea:focus {
         max-width: 1200px;
         justify-content: space-around;
     }
+    .product:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
+    }
 }
 
 @media screen and (max-width: 1280px) {
@@ -654,5 +658,30 @@ textarea:focus {
     .product:hover {
         transform: scale(1.05);
         box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.5);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .container-header,
+    .box-container {
+        max-width: 1050px;
+    }
+ 
+    .catalog-wrap {
+        display: grid;
+        justify-content: space-between;
+        grid-template-columns: repeat(3, minmax(300px, 1fr));
+        gap: 75px;
+        justify-content: space-evenly;    
+    }
+
+    .product {
+        max-width: 300px;
+        width: 100%;
+    }
+
+    .product:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
     }
 }
