--- a/style.css
+++ b/style.css
@@ -671,14 +671,12 @@ textarea:focus {
         padding: 13px 0px;
         background: url('../img/header-background.png');
         max-height: 46px;
-        height: 100%;
-        
+        height: 100%;   
     }
 
     .header-text, 
     .header-contacts-tel, 
-    .header-contacts-mail,
-    .header-form {
+    .header-contacts-mail {
         display: none;
     }
 
@@ -753,5 +751,37 @@ textarea:focus {
     .product:hover {
         transform: scale(1.05);
         box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
+    }
+
+    .advantages-block_wrap {
+        max-width: 1050px;
+        justify-content: space-around;
+    }
+
+    .advantage:not(:last-child) {
+        margin-right: 0px;
+    }
+    .form {
+        width: 520px;
+        height: 30px;
+        padding-left: 15px;
+        font-size: 16px;
+        line-height: 19px;
+        color: #B4B4B4;
+        background: #FFFFFF;
+        border: 1px solid #CACACA;
+        box-sizing: border-box;
+        border-radius: 3px 0px 0px 3px;
+    }
+    
+    .form-button {
+        text-align: center;
+        margin-left: -4px;
+        padding: 3px 26px;
+        font-size: 18px;
+        line-height: 21px;
+        color: #FFFFFF;
+        background: #3E7850;
+        border-radius: 0px 3px 3px 0px;
     }
 }
